<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:id="@+id/ScrollView01" android:background="@drawable/bg_full" android:layout_height="fill_parent">
    
<LinearLayout android:layout_width="fill_parent" android:orientation="vertical" android:layout_height="fill_parent">
    <RelativeLayout android:layout_height="wrap_content" android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:background="@drawable/top_bar_bg">
        <TextView android:layout_centerInParent="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings" android:id="@+id/textView1" android:textColor="@color/white" android:textSize="25dip" android:textStyle="bold"></TextView>
        <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_alignParentRight="true" android:id="@+id/button_restore" android:text="@string/restore"></Button>
    </RelativeLayout>
    <TextView android:textSize="20dip" android:textColor="@color/black" android:id="@+id/textView6" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/settings_RSS" android:layout_marginLeft="5dip" android:layout_marginTop="10dip"></TextView>
    <LinearLayout android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:orientation="vertical" android:background="@drawable/rounded" android:layout_marginLeft="5dip" android:layout_width="fill_parent" android:layout_marginRight="10dip">
        <RelativeLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/relativeLayout3" android:layout_marginTop="10dip">
            <TextView android:layout_marginLeft="10dip" android:textSize="21dip" android:gravity="center_vertical" android:textColor="@color/black" android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_alignTop="@+id/settings_sounds" android:layout_height="wrap_content" android:layout_alignBottom="@+id/settings_sounds" android:text="@string/sounds"></TextView>
            <ToggleButton android:id="@+id/settings_sounds" android:layout_alignParentRight="true" android:text="ToggleButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20dip"></ToggleButton>
        </RelativeLayout>
        <RelativeLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/relativeLayout4" android:layout_marginBottom="5dip">
            <TextView android:layout_marginLeft="10dip" android:id="@+id/textView8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/autoplay" android:layout_alignBottom="@+id/settings_autoplay" android:layout_alignTop="@+id/settings_autoplay" android:gravity="center_vertical" android:textColor="@color/black" android:textSize="21dip"></TextView>
            <ToggleButton android:layout_alignParentRight="true" android:text="ToggleButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20dip" android:id="@+id/settings_autoplay"></ToggleButton>
        </RelativeLayout>
        <RelativeLayout android:layout_width="fill_parent" android:id="@+id/relativeLayout5" android:layout_height="wrap_content">
            <TextView android:id="@+id/textView9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginLeft="10dip" android:text="@string/refresh" android:textColor="@color/black" android:textSize="21dip"></TextView>
            <Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/refreshList" android:layout_marginRight="15dip" android:layout_marginTop="5dip" android:layout_alignParentRight="true" android:entries="@array/refresh_times"></Spinner>
        </RelativeLayout>
    </LinearLayout>
    <TextView android:layout_marginTop="15dip" android:textSize="20dip" android:textColor="@color/black" android:id="@+id/textView5" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/settings_TTS" android:layout_marginLeft="5dip"></TextView>
    <LinearLayout android:id="@+id/linearLayout2" android:layout_height="wrap_content" android:layout_weight="1" android:orientation="vertical" android:background="@drawable/rounded" android:layout_marginLeft="5dip" android:layout_width="fill_parent" android:layout_marginRight="10dip">
        <RelativeLayout android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/relativeLayout2" android:layout_marginTop="5dip">
            <TextView android:layout_marginLeft="10dip" android:textSize="21dip" android:textColor="@color/black" android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:text="@string/language"></TextView>
            <Spinner android:layout_width="wrap_content" android:layout_marginTop="5dip" android:layout_height="wrap_content" android:entries="@array/voices" android:layout_alignParentRight="true" android:prompt="@string/voices_prompt" android:id="@+id/list" android:layout_marginRight="15dip"></Spinner>
        </RelativeLayout>
        <TableLayout android:id="@+id/tableLayout1" android:layout_marginLeft="5px" android:layout_height="wrap_content" android:layout_width="fill_parent" android:orientation="vertical" android:paddingBottom="5px" android:layout_marginTop="5px" android:layout_marginRight="5px">
            <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow1">
                <TextView android:layout_width="120px" android:textSize="21dip" android:layout_marginLeft="10dip" android:textColor="@color/black" android:id="@+id/textView3" android:layout_height="wrap_content" android:text="@string/volume"></TextView>
                <SeekBar android:layout_width="fill_parent" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/volume" android:layout_marginRight="10dip" android:max="100" android:progress="50"></SeekBar>
            </TableRow>
            <TableRow android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tableRow2" android:paddingTop="5px" android:layout_marginBottom="5dip">
                <TextView android:layout_width="120px" android:textSize="21dip" android:layout_marginLeft="10dip" android:textColor="@color/black" android:id="@+id/textView4" android:layout_height="wrap_content" android:text="@string/speed"></TextView>
                <SeekBar android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/speed" android:layout_marginRight="10dip" android:max="100" android:progress="50"></SeekBar>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>
