<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <ViewFlipper android:layout_height="fill_parent" android:layout_width="fill_parent" android:id="@+id/feed_switcher" android:background="@drawable/bg_full" android:animationCache="true">
        <LinearLayout android:id="@+id/linearLayout2" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
            <RelativeLayout android:background="@drawable/top_bar_bg" android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/channels_title" android:layout_alignTop="@+id/channels_add" android:textColor="@color/white" android:textSize="25dip" android:textStyle="bold" android:layout_width="fill_parent" android:layout_alignBottom="@+id/channels_add" android:gravity="center" android:layout_height="wrap_content" android:id="@+id/textView1"></TextView>
                <Button android:layout_alignParentRight="true" android:textStyle="bold" android:textSize="25dip" android:layout_width="wrap_content" android:text=" + " android:textColor="@color/black" android:id="@+id/channels_add" android:layout_height="wrap_content"></Button>
            </RelativeLayout>
            <LinearLayout android:id="@+id/linearLayout4" android:layout_width="fill_parent" android:gravity="center" android:layout_height="wrap_content" android:paddingBottom="5dip" android:paddingTop="5dip">
                <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button_stop_channels" android:background="@drawable/stop"></Button>
                <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button_play_channels" android:text="@string/play" android:textColor="@color/white" android:textSize="16dip" android:textStyle="bold" android:background="@drawable/play_bg" android:gravity="left|center_vertical" android:paddingLeft="4dip" android:layout_marginLeft="5dip" android:layout_marginRight="5dip"></Button>
                <SeekBar android:layout_width="100px" android:layout_height="wrap_content" android:id="@+id/seekbar_channels"></SeekBar>
            </LinearLayout>
            <ListView android:id="@+id/channellist" android:layout_width="fill_parent" android:layout_height="wrap_content"></ListView>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout1" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
            <RelativeLayout android:background="@drawable/top_bar_bg" android:id="@+id/relativeLayout2" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:layout_alignParentLeft="true" android:layout_width="wrap_content" android:id="@+id/backchannels" android:layout_height="wrap_content" android:text="@string/back"></Button>
                <TextView android:text="TextView" android:layout_alignTop="@+id/backchannels" android:textColor="@color/white" android:textSize="25dip" android:textStyle="bold" android:layout_width="fill_parent" android:layout_alignBottom="@+id/backchannels" android:gravity="center" android:layout_height="wrap_content" android:id="@+id/channel_name"></TextView>
                <Button android:layout_alignParentRight="true" android:layout_width="wrap_content" android:id="@+id/refreshchannels" android:layout_height="wrap_content" android:text="@string/ref"></Button>
            </RelativeLayout>
            <LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:gravity="center" android:layout_height="wrap_content" android:paddingBottom="5dip" android:paddingTop="5dip">
                <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button_stop_feeds" android:background="@drawable/stop"></Button>
                <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button_play_feeds" android:background="@drawable/play_bg" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:text="@string/play" android:textColor="@color/white" android:textSize="16dip" android:textStyle="bold" android:gravity="left|center_vertical" android:paddingLeft="4dip"></Button>
                <SeekBar android:layout_width="100px" android:layout_height="wrap_content" android:id="@+id/seekbar_feeds"></SeekBar>
            </LinearLayout>
            <ListView android:id="@+id/itemlist" android:layout_height="fill_parent" android:layout_width="fill_parent"></ListView>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearLayout3" android:layout_height="fill_parent" android:layout_width="fill_parent" android:orientation="vertical">
            <RelativeLayout android:background="@drawable/top_bar_bg" android:id="@+id/relativeLayout3" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:layout_alignParentLeft="true" android:layout_width="wrap_content" android:id="@+id/back" android:layout_height="wrap_content" android:text="@string/back"></Button>
                <EditText android:text="EditText" android:layout_alignTop="@+id/back" android:layout_width="wrap_content" android:layout_toRightOf="@+id/back" android:layout_alignBottom="@+id/back" android:layout_toLeftOf="@+id/button_options" android:layout_height="wrap_content" android:id="@+id/editText_page"></EditText>
                <Button android:layout_alignParentRight="true" android:layout_width="wrap_content" android:id="@+id/button_options" android:layout_height="wrap_content" android:text="@string/options"></Button>
            </RelativeLayout>
            <RelativeLayout android:id="@+id/relativeLayout4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:paddingBottom="5dip" android:paddingTop="5dip">
                <Button android:layout_alignParentLeft="true" android:layout_width="wrap_content" android:background="@drawable/button_back" android:id="@+id/button_prev_article" android:layout_height="wrap_content" android:layout_marginLeft="3dip"></Button>
                <LinearLayout android:id="@+id/linearLayout5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/button_next_article" android:layout_toRightOf="@+id/button_prev_article" android:gravity="center">
                    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button_stop_page" android:background="@drawable/stop"></Button>
                    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/button_play_page" android:background="@drawable/play_bg" android:text="@string/play" android:textColor="@color/white" android:textSize="16dip" android:textStyle="bold" android:layout_marginLeft="5dip" android:layout_marginRight="5dip" android:gravity="left|center_vertical" android:paddingLeft="4dip"></Button>
                    <SeekBar android:layout_width="100px" android:layout_height="wrap_content" android:id="@+id/seekbar_page"></SeekBar>
                </LinearLayout>
                <Button android:layout_alignParentRight="true" android:layout_width="wrap_content" android:background="@drawable/button_next" android:id="@+id/button_next_article" android:layout_height="wrap_content" android:layout_marginRight="3dip"></Button>
            </RelativeLayout>
            <android.webkit.WebView android:layout_width="fill_parent" android:id="@+id/rss_page" android:layout_height="fill_parent"></android.webkit.WebView>
        </LinearLayout>

    </ViewFlipper>
</LinearLayout>
